[build-system]
requires      = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "haraka"
version         = "0.2.13"
description     = "Reusable post-generation helper for Cookiecutter micro-service templates"
readme          = "README.md"
license         = {text = "MIT"}
authors         = [{name = "Will Burks", email = "will@example.com"}]
requires-python = ">=3.9"

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/wjb-dev/comet-postgen"
Source   = "https://github.com/wjb-dev/comet-postgen"

[tool.setuptools.packages.find]
where = ["."]
